Formatted the file, removed bugs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,11 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/footer.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/components/footer.tsx"
+  ],
   "exclude": ["node_modules"]
 }
