--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.1",
-    "@types/styled-system": "^5.1.20",
     "next": "13.5.4",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "react": "^18",
-    "react-dom": "^18",
-    "styled-system": "^5.1.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
