--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.0",
     "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
+    "lodash.debounce": "^4.0.8",
     "next": "13.5.4",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "react": "^18",
@@ -26,6 +27,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
