--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier-plugin-tailwindcss": "^0.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.18.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "uuid": "^9.0.1"
