--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "**/*.tsx",
     "src/components/footer.tsx",
     "src/components/ourReach.tsx"
-  ],
+, "src/components/cardpopup.jsx"  ],
   "exclude": ["node_modules"]
 }
