--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "**/*.ts",
     "**/*.tsx",
     "src/components/footer.tsx",
-    "src/components/ourReach.tsx"
-, "src/components/cardpopup.jsx"  ],
+    "src/components/ourReach.tsx",
+    "src/components/cardpopup.jsx"
+  ],
   "exclude": ["node_modules"]
 }
