--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     "**/*.tsx",
     "src/components/footer.tsx",
     "src/components/ourReach.tsx",
-    "src/components/cardpopup.jsx"
+    "src/components/cardpopup.tsx"
   ],
   "exclude": [
     "node_modules"
